tests/sema/golden/27_string_plus_int.out
tests/sema/bad/27_string_plus_int.sg:4:12: error: arithmetic on non-numeric operands (string vs int)
    return s + x;
             ^
